# llm-software-responsibility-extraction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configuration/extraction/: configuration.txt
configuration/sequencing/: configuration.txt
llama/: poc_chat ggml.ipynb
llama/llama/: poc_chat ggml.ipynb
llm-sre/requirement-extraction/: extractor.py
llm-sre/requirement-extraction/llm/: builder.py  director.py  llama_builder.py  llm.py
llm-sre/requirement-extraction/models/: requirement.py  responsibility.py
llm_sre/: app.py  responsibility_analyzer.py  responsibility_extractor.py  responsibility_sequencer.py
llm_sre/llm/: builder.py  director.py  llama_re_builder.py  llama_rs_builder.py  llama_rsyn_builder.py  llm.py  llmre.py  llmrs.py  llmrsyn.py
llm_sre/llm/builders/: builder.py  director.py  llama_re_builder.py  llama_rs_builder.py  llama_rsyn_builder.py
llm_sre/models/: example.py  requirement.py  responsibility.py
llm_sre/models/configuration/: inference.py  model.py  task.py
llm_sre/tasks/: __init__.py  io.py  responsibility_analyzer.py  responsibility_clustering.py  responsibility_extractor.py  responsibility_sequencer.py
llm_sre/utils/: prompt.py
notebooks/: poc_chat ggml.ipynb
