[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Ana Martinez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.25.2"
langchain = {extras = ["llm"], version = "^0.0.299"}
pydantic = "^2.4.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
